@@ -1,3 +1,11 @@
+2007-12-31  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/versioncontrol/mtn.py, modulesets/moduleset.dtd: added
+	support for Monotone, patch by Gary Kramlich, slightly edited by
+	myself.  (closes: #481742)
+
+	* modulesets/gnome-2.22.modules: added pidgin, as it uses Monotone.
+
 2007-12-28  Frederic Peters  <fpeters@0d.be>
 
 	* modulesets/freedesktop-2.22.modules: libtelepathy depends on
